2001-07-21  John Kirkland  <jpk@bl.org>
	
	* Added ability to statically sort photos by name via the
	  new sort feature.  This feature was added based on discussion
	  between Ken Frank <kffrank@mn.mediaone.net> and 
	  Ed Wilts <ewilts@ewilts.org> on our new Gallery-users mailing 
	  list.

2001-07-19  John Kirkland  <jpk@bl.org>

	* Fixed SF bug #442881.  "Extra </table> tag in search.php."
	
	* Fixed SF bug #439790.  "Add photos and nested albums."


2001-07-19  Bharat Mediratta  <bharat@menalto.com>

	* Added Album upgrade code.  If you upgrade Gallery to a newer
	  version and the album class has changed, you'll be required to
	  upgrade your albums to the latest version.  There is a spiffy
	  dialog that will walk you through a mostly automated process. 

2001-07-19  John Kirkland  <jpk@bl.org>
	* Replaced album shuffle with album sorting.  This feature
	  will allow album owners to sort their albums according to
	  the file upload date or the Picture-Taken date.  The 
	  picture-taken date is editable from the edit_caption screen.
	  Significant ideas and sorting code for this feature provided
	  by Sean Kelly <kelly@ad1440.net>.

2001-07-18  Bharat Mediratta  <bharat@menalto.com>

	* Alpha quality Win32 support is in.  I've tested the core
	  functionality but not things like zip and jhead support.  Edit
	  thumbnails appears not to be working.

	* Fixed the "1 byte sample bug".  This turned out to be quite
	  complicated and in order to maintain efficiency I had to update
	  the album integrity check code.  The upshot of this is that the
	  config wizard's public comment and click count variables HAVE
	  BEEN RESET.  If you have a copy of Gallery v1.2-cvs from prior
	  to this date you should audit these values in the config wizard
	  before viewing albums.

2001-07-13  John Kirkland  <jpk@bl.org>
	* Fixed SF bug#441249.  If a user was using the new "keep 
	  original filenames" feature and they uploaded a file with